--- a/style.css
+++ b/style.css
@@ -17,17 +17,14 @@ body {
 #navbar {
     position: fixed;
     min-width: 290px;
-    margin-right: 50px;
     height: 100%;
     border-right: solid;
     border-color: rgba(9, 16, 16, 0.54);
 }
 
-#navbar header {
-    text-align: center;
-    padding: 20px 0;
-    font-size: 1.7em;
-    font-weight: 500;
+#navbar header img {
+    width: 300px;
+    height: 200px;
 }
 
 #navbar ul {
@@ -52,7 +49,7 @@ body {
 }
 
 #main-doc{
-  margin-left:310px;
+  margin-left:365px;
   padding:20px;
   margin-bottom:110px;
 } 
@@ -91,9 +88,6 @@ code {
     }
     
     #navbar {
-        position: fixed;
-        top: 0;
-        left: 0;
         width: 100%;
         height: 50%;
         border: none;
@@ -111,4 +105,33 @@ code {
         margin-top: 50vh;
     }
     
+}
+
+#navbar ul li p {
+    font-size: 1.5rem;
+}
+
+#beatles-cover {
+    height: 27vh;
+    width: auto;
+    margin: 0 .15rem;
+}
+
+.cover-albums {
+    display: flex;
+    justify-content: left;
+}
+
+#beatles-member-photo {
+    float: left;
+    height: 20vh;
+    margin-right: .5rem;
+    margin-bottom: .5rem;
+    border-radius: .5rem
+}
+
+footer {
+    text-align: center;
+    font-weight: 600;
+    margin-top: 20vh;
 }
